# yangl

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CollectSourceFiles.cmake  README.md  build.sh  snapcraft.yaml  version.h.in  version.sh  yangl.metainfo.xml  yangl.metainfo.xml.in  yangl.pro
app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  actionresultviewer.cpp  app.pro  common.cpp  common.h  config.pri  dialog.cpp  dialog.h  main.cpp  mapserversmodel.cpp  mapserversmodel.h  mapwidget.cpp  mapwidget.h  menuholder.cpp  menuholder.h  nordvpninfo.cpp  nordvpninfo.h  nordvpnwraper.cpp  nordvpnwraper.h  rsc.qrc  serverschartview.cpp  serverschartview.h  serverschartview.ui  serversfiltermodel.h  serverslistmanager.cpp  serverslistmanager.h  statechecker.cpp  statechecker.h  trayicon.cpp  trayicon.h  version.cpp  versiongen.pri
app/actions/: action.cpp  action.h  actionaccount.cpp  actionaccount.h  actionconnect.cpp  actionconnect.h  actiondisconnect.cpp  actiondisconnect.h  actiongroups.cpp  actiongroups.h  actionjson.cpp  actionjson.h  actionresultviewer.cpp  actionresultviewer.h  actionsettings.cpp  actionsettings.h  actionsfactory.cpp  actionsfactory.h  actionstatus.cpp  actionstatus.h  actionstorage.cpp  actionstorage.h  actiontypes.h  clicallresultview.cpp  clicallresultview.h
app/cli/: cliaction.cpp  cliaction.h  clibus.cpp  clibus.h  clicall.cpp  clicall.h  clicaller.cpp  clicaller.h
app/geo/: mapserversmodel.cpp  mapserversmodel.h  mapwidget.cpp  mapwidget.h  serverschartview.cpp  serverschartview.h  serverschartview.ui  serversfiltermodel.cpp  serverslistmanager.cpp  serverslistmanager.h
app/geo/qml/: MapView.qml
app/ipc/: ipcbus.cpp  ipcbus.h  ipccall.cpp  ipccall.h
app/qml/: MapView.qml
app/resources/about/: License.txt  yangl.html
app/settings/: actioneditor.cpp  actioneditor.h  actioneditor.ui  actionstab.cpp  actionstab.h  actionstab.ui  apppatheditor.cpp  apppatheditor.h  appsettings.cpp  appsettings.h  iconlineedit.cpp  iconlineedit.h  mapsettings.cpp  mapsettings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingsmanager.cpp  settingsmanager.h
app/version/: CMakeLists.txt  appversiondefs.cpp  appversiondefs.h  appversiondefs.h.in
src/: CMakeLists.txt  main.cpp  rsc.qrc
src/actions/: action.cpp  action.h  actionjson.cpp  actionjson.h  actionresultviewer.cpp  actionresultviewer.h  actionstorage.cpp  actionstorage.h  clicallresultview.cpp  clicallresultview.h
src/app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  common.cpp  common.h  menuholder.cpp  menuholder.h  nordvpninfo.cpp  nordvpninfo.h  nordvpnwraper.cpp  nordvpnwraper.h  statechecker.cpp  statechecker.h  trayicon.cpp  trayicon.h
src/cli/: clicall.cpp  clicall.h  clicaller.cpp  clicaller.h
src/geo/: coordinatesresolver.cpp  coordinatesresolver.h  flatplaceproxymodel.cpp  flatplaceproxymodel.h  mapserversmodel.cpp  mapserversmodel.h  mapwidget.cpp  mapwidget.h  placeinfo.cpp  placeinfo.h  serverlocationresolver.cpp  serverlocationresolver.h  serverschartview.cpp  serverschartview.h  serversfiltermodel.cpp  serversfiltermodel.h  serverslistmanager.cpp  serverslistmanager.h
src/geo/qml/: MapView.qml
src/resources/about/: License.txt  NordVPN.html  Qt.html  yangl.html
src/resources/map/: cities.csv
src/settings/: actioneditor.cpp  actioneditor.h  actioneditor.ui  actionstab.cpp  actionstab.h  apppatheditor.cpp  apppatheditor.h  appsettings.cpp  appsettings.h  iconlineedit.cpp  iconlineedit.h  mapsettings.cpp  mapsettings.h  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h
src/version/: CMakeLists.txt  GetGitRevisionDescription.cmake  appversiondefs.cpp  appversiondefs.h  appversiondefs.h.in  versiontriplet.cpp  versiontriplet.h
test/: CMakeLists.txt
test/test_fake_status/: CMakeLists.txt  main.cpp
test/tests/: CMakeLists.txt  TestMacros.cmake  main.cpp  tests.pro  tests_all_sources.pri  tests_common.pri  tst_actionjson.cpp  tst_actionjson.h  tst_clicall.cpp  tst_clicaller.cpp
test/tests/actions/: CMakeLists.txt  testaction.cpp  testaction.h  testactionjson.cpp  testactionmain.cpp  testactionstorage.cpp
test/tests/app/: CMakeLists.txt
test/tests/app/statechecker/: CMakeLists.txt  teststatechecker.cpp
test/tests/cli/: CMakeLists.txt  testclicall.cpp  testclicaller.cpp
test/tests/geo/: CMakeLists.txt  testclicall.cpp  testcoordinatesresolver.cpp
test_fake_status/: main.cpp  test_fake_status.pro
tests/: main.cpp  (+18 more)
